feat: add basic openapi configuration

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 			<version>1.0.2</version>
 		</dependency>
 
+		<!-- API Documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -96,6 +103,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- Lombok -->
 				<configuration>
 					<excludes>
 						<exclude>
