--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,3 +18,6 @@ open:
     description: API Documentation for EasyHostel Application
     serverUrl: http://localhost:8080
     serverName: Test Server
+api:
+  version: v0.1
+  base-path: /api/${api.version}
