feat: add JWT authentication

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+application.properties
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij,maven,netbeans,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij,maven,netbeans,visualstudiocode
 
