feat: add base authorization and authorization for House

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,7 +25,7 @@ logging:
   level:
     org:
       hibernate:
-        SQL: DEBUG
+        SQL: off
         type:
           descriptor:
             sql:
