--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,9 +3,9 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: jdbc:postgresql://localhost:5432/easyhostel
-    username: nyx
-    password: 123
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/easyhostel}
+    username: ${SPRING_DATASOURCE_USERNAME:nyx}
+    password: ${SPRING_DATASOURCE_PASSWORD:123}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -13,7 +13,7 @@ spring:
     database: postgresql
     show-sql: false
 server:
-  port: 8082
+  port: 8080
 open:
   api:
     title: EasyHostel API
