fix: config server url for swagger to run remotely

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,13 +14,12 @@ spring:
     show-sql: false
 server:
   port: 8080
-  url: http://localhost
 open:
   api:
     title: EasyHostel API
     version: ${api.version}
     description: API Documentation for EasyHostel Application
-    serverUrl: ${server.url}:${server.port}
+    serverUrl: ${server.url:http://localhost:${server.port}}
     serverName: Production Server
 logging:
   level:
