--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,14 +14,13 @@ spring:
     show-sql: false
 server:
   port: 8080
-  url: http://localhost
 open:
   api:
     title: EasyHostel API
     version: ${api.version}
     description: API Documentation for EasyHostel Application
-    serverUrl: ${server.url}:${server.port}
-    serverName: Dev Server
+    serverUrl: ${server.url:http://localhost:${server.port}}
+    serverName: Development Server
 logging:
   level:
     org:
